--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Yupu's blog
-header-img: img/bg-index.jpg  #img/bg-index.jpg
+header-img: img/post-bg-01.jpg  #img/bg-index.jpg
 email: dongyupu@foxmail.com
 description: "Dream big, work smart, deliver fast!Software to plan, collaborate, code, and service. Built for teams."
 baseurl: ""
